--- a/export/html5/bin/index.html
+++ b/export/html5/bin/index.html
@@ -54,7 +54,7 @@
 	<div id="openfl-content"></div>
 	
 	<script type="text/javascript">
-		lime.embed ("openfl-content", 1280, 720, "FFFFFF");
+		lime.embed ("openfl-content", 1280, 720, "000000");
 	</script>
 	
 </body>
